agregue 2 endpoints que es para ver los post de un usuario en especifico y los post a los que un usuario le dio like y actualice la documentacion de Swagger
